plugins {
    id 'java'
    id 'application'
}

sourceCompatibility = '23'
targetCompatibility = '23'

repositories {
    mavenCentral()
}

dependencies {
    // Add your dependencies here
}

compileJava {
    options.release = 23
    options.compilerArgs += [
        '--enable-preview',
        '-Xlint:preview'
    ]
}

application {
    mainClass = 'Main'
}

run {
    jvmArgs += '--enable-preview'
}
